add-feature-section

--- a/snapeditvn-clone/src/pages/blur-bg/index.html
+++ b/snapeditvn-clone/src/pages/blur-bg/index.html
@@ -34,11 +34,169 @@
       </div>
       <nav id="navbar" class="nav">
         <ul class="d-flex justify-content-between">
-          <li>
+          <li class="dropdown">
             <a href="home.html">Sản phẩm AI <i class="fa-solid fa-angle-down"></i></a>
+            <div class="dropdown-content">
+              <a href="#"
+                ><div>
+                  <svg
+                    class="align-middle transition-all group-hover:text-blue-700"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_12691_2490)">
+                      <path
+                        d="M16.7107 13.3333C15.4832 15.8008 12.9432 17.4999 9.9999 17.4999C7.05656 17.4999 4.51656 15.8008 3.28906 13.3333"
+                        stroke="#252638"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                      <path
+                        d="M16.7107 6.66667C15.4832 4.19917 12.9432 2.5 9.9999 2.5C7.05656 2.5 4.51656 4.19917 3.28906 6.66667"
+                        stroke="#252638"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                      <path
+                        d="M8.33333 10H2.5"
+                        stroke="#252638"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                      <path
+                        d="M6.66602 8.33325L8.33268 9.99992L6.66602 11.6666"
+                        stroke="#252638"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                      <path
+                        d="M11.666 10H17.4993"
+                        stroke="#252638"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                      <path
+                        d="M13.3327 11.6666L11.666 9.99992L13.3327 8.33325"
+                        stroke="#252638"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_12691_2490">
+                        <rect width="20" height="20" fill="white"></rect>
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                Nén ảnh</a
+              >
+              <a href="#"
+                ><svg
+                  class="align-middle transition-all group-hover:text-blue-700"
+                  width="20"
+                  height="21"
+                  viewBox="0 0 20 21"
+                  fill="none"
+                >
+                  <path
+                    d="M5.21191 5.67262C7.87387 3.02412 12.1789 3.03503 14.8273 5.69699C16.5809 7.4595 17.2327 10.0386 16.5269 12.4226"
+                    stroke="#252638"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M14.7326 15.3886C12.0371 18.005 7.731 17.9409 5.11464 15.2454C3.40316 13.4822 2.77576 10.933 3.47341 8.5769"
+                    stroke="#252638"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M4.72116 9.82354L3.19449 8.29688L1.66699 9.82438"
+                    stroke="#252638"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M15.2793 11.1769L16.806 12.7035L18.3335 11.176"
+                    stroke="#252638"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M10.0005 12.2017C10.9403 12.2017 11.7022 11.4398 11.7022 10.5C11.7022 9.5602 10.9403 8.79834 10.0005 8.79834C9.06069 8.79834 8.29883 9.5602 8.29883 10.5C8.29883 11.4398 9.06069 12.2017 10.0005 12.2017Z"
+                    stroke="#252638"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+                Đổi định dạng</a
+              >
+              <a href="#"
+                ><svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                  <g id="icon-blur-on" clip-path="url(#clip0_14090_52785)">
+                    <path
+                      id="Vector"
+                      d="M5.5 14C5.5 13.7261 5.72614 13.5 6 13.5C6.27386 13.5 6.5 13.7261 6.5 14C6.5 14.2739 6.27386 14.5 6 14.5C5.72614 14.5 5.5 14.2739 5.5 14ZM5.5 18C5.5 17.7261 5.72614 17.5 6 17.5C6.27386 17.5 6.5 17.7261 6.5 18C6.5 18.2739 6.27386 18.5 6 18.5C5.72614 18.5 5.5 18.2739 5.5 18ZM5.5 10C5.5 9.72614 5.72614 9.5 6 9.5C6.27386 9.5 6.5 9.72614 6.5 10C6.5 10.2739 6.27386 10.5 6 10.5C5.72614 10.5 5.5 10.2739 5.5 10ZM5.5 6C5.5 5.72614 5.72614 5.5 6 5.5C6.27386 5.5 6.5 5.72614 6.5 6C6.5 6.27386 6.27386 6.5 6 6.5C5.72614 6.5 5.5 6.27386 5.5 6ZM14.5 6C14.5 6.27386 14.2739 6.5 14 6.5C13.7261 6.5 13.5 6.27386 13.5 6C13.5 5.72614 13.7261 5.5 14 5.5C14.2739 5.5 14.5 5.72614 14.5 6ZM10.5 6C10.5 6.27386 10.2739 6.5 10 6.5C9.72614 6.5 9.5 6.27386 9.5 6C9.5 5.72614 9.72614 5.5 10 5.5C10.2739 5.5 10.5 5.72614 10.5 6ZM9 14C9 13.4461 9.44614 13 10 13C10.5539 13 11 13.4461 11 14C11 14.5539 10.5539 15 10 15C9.44614 15 9 14.5539 9 14ZM17.5 14C17.5 13.7261 17.7261 13.5 18 13.5C18.2739 13.5 18.5 13.7261 18.5 14C18.5 14.2739 18.2739 14.5 18 14.5C17.7261 14.5 17.5 14.2739 17.5 14ZM17.5 18C17.5 17.7261 17.7261 17.5 18 17.5C18.2739 17.5 18.5 17.7261 18.5 18C18.5 18.2739 18.2739 18.5 18 18.5C17.7261 18.5 17.5 18.2739 17.5 18ZM17.5 10C17.5 9.72614 17.7261 9.5 18 9.5C18.2739 9.5 18.5 9.72614 18.5 10C18.5 10.2739 18.2739 10.5 18 10.5C17.7261 10.5 17.5 10.2739 17.5 10ZM17.5 6C17.5 5.72614 17.7261 5.5 18 5.5C18.2739 5.5 18.5 5.72614 18.5 6C18.5 6.27386 18.2739 6.5 18 6.5C17.7261 6.5 17.5 6.27386 17.5 6ZM13.5 18C13.5 17.7261 13.7261 17.5 14 17.5C14.2739 17.5 14.5 17.7261 14.5 18C14.5 18.2739 14.2739 18.5 14 18.5C13.7261 18.5 13.5 18.2739 13.5 18ZM9 10C9 9.44614 9.44614 9 10 9C10.5539 9 11 9.44614 11 10C11 10.5539 10.5539 11 10 11C9.44614 11 9 10.5539 9 10ZM9.5 18C9.5 17.7261 9.72614 17.5 10 17.5C10.2739 17.5 10.5 17.7261 10.5 18C10.5 18.2739 10.2739 18.5 10 18.5C9.72614 18.5 9.5 18.2739 9.5 18ZM13 14C13 13.4461 13.4461 13 14 13C14.5539 13 15 13.4461 15 14C15 14.5539 14.5539 15 14 15C13.4461 15 13 14.5539 13 14ZM13 10C13 9.44614 13.4461 9 14 9C14.5539 9 15 9.44614 15 10C15 10.5539 14.5539 11 14 11C13.4461 11 13 10.5539 13 10Z"
+                      fill="#2d2d2d"
+                      stroke="#2d2d2d"
+                    ></path>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_14090_52785">
+                      <rect width="24" height="24" fill="white"></rect>
+                    </clipPath>
+                  </defs>
+                </svg>
+                Làm mờ nền ảnh</a
+              >
+              <a href="#"
+                ><svg
+                  class="align-middle transition-all group-hover:text-blue-700"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 18 18"
+                  fill="none"
+                >
+                  <path
+                    d="M12.3346 11.2975V10.6567C12.3346 10.3384 12.1305 10.0542 11.828 9.9542L10.1121 9.38253V7.9017L10.628 7.57087C11.008 7.3267 11.1855 6.86337 11.063 6.42837C10.9388 5.9842 10.5355 5.6792 10.0746 5.6792H7.92797C7.46797 5.6792 7.0638 5.98503 6.9388 6.42837C6.81714 6.86337 6.9938 7.3267 7.3738 7.57087L7.88964 7.9017V9.38337L6.1738 9.95503C5.87214 10.0542 5.66797 10.3375 5.66797 10.6567V11.2975C5.66797 11.4934 5.74547 11.6825 5.88547 11.8217L6.19214 12.1284C6.3313 12.2675 6.51964 12.3459 6.7163 12.3459H11.288C11.4838 12.3459 11.673 12.2684 11.8121 12.1284L12.1188 11.8217C12.2571 11.6825 12.3346 11.4942 12.3346 11.2975Z"
+                    stroke="#2d2d2d"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M14.3033 3.70842C17.2322 6.63735 17.2322 11.3861 14.3033 14.315C11.3744 17.2439 6.62562 17.2439 3.6967 14.315C0.767767 11.3861 0.767767 6.63734 3.6967 3.70842C6.62563 0.779485 11.3744 0.779485 14.3033 3.70842Z"
+                    stroke="#2d2d2d"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+                Thêm watermark</a
+              >
+            </div>
           </li>
-          <li>
+          <li class="dropdown">
             <a href="about.html">Giải pháp <i class="fa-solid fa-angle-down"></i></a>
+            <div class="dropdown-content">
+              <a href="#">Nhiếp ảnh</a>
+              <a href="#">Thương mại điện tử</a>
+              <a href="#">Bất động sản</a>
+            </div>
           </li>
           <li><a href="contact.html">Giá</a></li>
           <li><a href="blog.html">API</a></li>
@@ -221,6 +379,68 @@
               />
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="feature">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="feature-card col-5 row">
+            <div class="feature-icon-wrapper col-3">
+              <img src="https://assets.snapedit.app/images/common/Frame_1.png" alt="" />
+            </div>
+            <div class="feature-card-content col-9">
+              <h3 class="feature-title fs-5 text-white">Kết quả tốt hơn</h3>
+              <p class="feature-description fw-light text-white">
+                Công cụ tự động xác định chủ thể của ảnh chính xác, tạo hiệu ứng làm mờ mượt mà, tự
+                nhiên. So với các công cụ khác, nó mang đến kết quả tốt hơn với đường viền không
+                lem, sắc nét.
+              </p>
+            </div>
+          </div>
+          <div class="feature-card col-5 row">
+            <div class="feature-icon-wrapper col-3">
+              <img src="https://assets.snapedit.app/images/common/Frame_2.png" alt="" />
+            </div>
+            <div class="feature-card-content col-9">
+              <h3 class="feature-title fs-5 text-white">Hiệu ứng sáng tạo</h3>
+              <p class="feature-description fw-light text-white">
+                SnapEdit có 5 hiệu ứng làm mờ ảnh: cổ điển, pixelate, chuyển động, radial, và zoom.
+                Bạn có thể tạo nền bokeh với ánh sáng mờ ảo đẹp mắt.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-between mt-5">
+          <div class="feature-card col-5 row">
+            <div class="feature-icon-wrapper col-3">
+              <img src="https://assets.snapedit.app/images/common/Frame_3.png" alt="" />
+            </div>
+            <div class="feature-card-content col-9">
+              <h3 class="feature-title fs-5 text-white">Tải xuống HD</h3>
+              <p class="feature-description fw-light text-white">
+                Thêm vào đó, bạn có thể tải xuống hình ảnh đã cải thiện với chất lượng HD.
+              </p>
+            </div>
+          </div>
+          <div class="feature-card col-5 row">
+            <div class="feature-icon-wrapper col-3">
+              <img src="https://assets.snapedit.app/images/common/Frame_4.png" alt="" />
+            </div>
+            <div class="feature-card-content col-9">
+              <h3 class="feature-title fs-5 text-white">Làm mờ nền trực tuyến</h3>
+              <p class="feature-description fw-light text-white">
+                Không cần cài đặt ứng dụng, bạn có thể sử dụng công cụ này trên điện thoại iPhone,
+                Samsung, máy tính bảng hoặc PC.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="mt-5 text-center">
+          <label class="text-dark" for="introUpFile"
+            >Thử ngay <i class="fa-solid fa-arrow-right text-dark mx-1"></i
+          ></label>
+          <input type="file" id="introUpFile" style="display: none" />
         </div>
       </div>
     </section>
