--- a/snapeditvn-clone/src/pages/add-watermark/index.html
+++ b/snapeditvn-clone/src/pages/add-watermark/index.html
@@ -4,177 +4,188 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chèn Watermark - SnapEdit Clone</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <!-- Header -->
-  <header class="header">
-    <div class="container">
-      <div class="header-content">
-        <a href="/home" class="logo">
-          <img src="../../../public/images/snapedit-logo.svg" alt="SnapEdit Logo" height="40"/>
+  <!-- HEADER -->
+  <header class="header"> 
+    <div class="container"> 
+      <div class="header-content"> <!-- Chứa toàn bộ nội dung bên trong header -->
+
+        <!-- Logo -->
+        <a href="/home" class="logo"> 
+          <img src="../../../public/images/snapedit-logo.svg" alt="SnapEdit Logo" height="40"/> SnapEdit
         </a>
+
+        <!-- Thanh điều hướng (Navigation menu) -->
         <nav class="nav-menu">
           <ul>
             <li class="dropdown">
-              <a href="#">Sản phẩm AI <span class="arrow">▼</span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/add-watermark">Thêm Watermark</a></li>
-                <li><a href="/blur-bg">Làm mờ nền</a></li>
-                <li><a href="/compress-image">Nén ảnh</a></li>
-                <li><a href="/convert-image">Chuyển đổi ảnh</a></li>
+              <a href="#">Sản phẩm AI <span class="arrow">▼</span></a> 
+              <ul class="dropdown-menu"> <!-- Menu con -->
+                <li><a href="/add-watermark">Thêm Watermark</a></li> <!-- Link tới tính năng thêm watermark -->
+                <li><a href="/blur-bg">Làm mờ nền</a></li> 
+                <li><a href="/compress-image">Nén ảnh</a></li> 
+                <li><a href="/convert-image">Chuyển đổi ảnh</a></li> 
               </ul>
             </li>
-            <li><a href="#">Giá</a></li>
+            <li><a href="#">Giá</a></li> <!-- Mục menu đơn, không có dropdown -->
           </ul>
         </nav>
+
+        <!-- Các hành động bên phải header -->
         <div class="header-actions">
           <div class="language-switcher">
-            <button class="language-btn">
-              <img src="../../../public/images/favicon.svg" alt="Tiếng Việt" width="20" height="20"/>
-              <span>Tiếng Việt</span>
-              <span class="arrow">▼</span>
+            <button class="language-btn"> 
+              <img src="https://flagcdn.com/w20/vn.png" alt="Tiếng Việt" width="20" height="20"/>
+              <span>Tiếng Việt</span> 
+              <span class="arrow">▼</span> 
             </button>
-            <ul class="language-menu">
-              <li><a href="#"><img src="../../assets/images/flags/vi.svg" alt="VI" width="18" height="18"/> Tiếng Việt</a></li>
-              <li><a href="#"><img src="../../assets/images/flags/en.svg" alt="EN" width="18" height="18"/> English</a></li>
+            <ul class="language-menu"> <!-- Danh sách các ngôn ngữ có thể chọn -->
+              <li><a href="#"><img src="https://flagcdn.com/w20/vn.png" alt="VI" width="18" height="18"/> Tiếng Việt</a></li>
+              <li><a href="#"><img src="https://flagcdn.com/w20/us.png" alt="EN" width="18" height="18"/> English</a></li>
             </ul>
           </div>
-          <a href="#" class="login-link">Đăng nhập</a>
-          <a href="#" class="btn btn-primary free-btn">Thử miễn phí</a>
+
+          <a href="#" class="login-link">Đăng nhập</a> <!-- Nút đăng nhập -->
+
+          <!-- Nút dùng thử miễn phí -->
+          <a href="#" class="btn btn-primary free-btn">Thử miễn phí</a> 
         </div>
       </div>
     </div>
   </header>
 
-  <!-- Nội dung chính bọc trong main-content -->
   <main class="main-content">
-    <!-- INTRO -->
-    <section class="intro-section container">
-      <div class="intro-left">
-        <h1>Chèn Watermark<br>Chèn Logo Cho Ảnh</h1>
-        <p>Một công cụ đơn giản, nhanh chóng và hiệu quả để thêm watermark bảo vệ bản quyền vào của bất kỳ hình ảnh nào.</p>
-        <div class="image-group" id="imageGroup">
-          <img src="../../../public/images/add-watermark/anh-meo-khong-watermark.jpg" alt="Ảnh gốc" />
-          <img src="../../../public/images/add-watermark/anh-meo-watermark.png" alt="Ảnh có watermark" class="right" />
-          <div class="emoji">😍</div>
-        </div>
-      </div>
-      
-      <div class="upload-box">
-        <button id="uploadBtn">Tải lên hình ảnh</button>
-        <input type="file" id="fileInput" accept="image/*" style="display:none" />
-        <p>Hoặc chỉ cần thả vào đây Ctrl + V để dán hình ảnh</p>
-        <hr />
-        <p>Không có hình ảnh? Thử một trong những cái này</p>
-        <div class="upload-images" id="presetImages">
-          <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Ảnh mẫu 1" />
-          <img src="https://cdn-icons-png.flaticon.com/512/616/616491.png" alt="Ảnh mẫu 2" />
-          <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Ảnh mẫu 3" />
-          <img src="https://cdn-icons-png.flaticon.com/512/616/616491.png" alt="Ảnh mẫu 4" />
-        </div>
-      </div>
-    </section>
+  <!-- INTRO -->
+  <section class="intro-section container">
+    <div class="intro-left">
+      <h1>Chèn Watermark<br>Chèn Logo Cho Ảnh</h1>
 
-    <!-- HOW IT WORKS -->
-    <section class="how-section">
-      <h2>Cách chèn watermark trên điện thoại hoặc PC</h2>
-      <p>Muốn bảo vệ ảnh của bạn bằng watermark văn bản hoặc logo? Dưới đây là các bước để sử dụng phần mềm chèn watermark online của chúng tôi:</p>
-      <div class="how-cards">
-        <div class="card">
-          <img src="../../../public/images/add-watermark/step_1.png" alt="Upload" />
-          <h3>1. Tải ảnh lên</h3>
-          <p>Tải lên ảnh từ thiết bị của bạn hoặc kéo và thả chúng vào trình chỉnh sửa.</p>
-        </div>
-        <div class="card">
-          <img src="../../../public/images/add-watermark/step_2.png" alt="Watermark" />
-          <h3>2. Thêm watermark</h3>
-          <p>Gắn watermark văn bản/logo vào ảnh của bạn. Thủ công đặt chúng trên hình ảnh của bạn, điều chỉnh phông chữ, kích thước, độ mờ theo sở thích của bạn.</p>
-        </div>
-        <div class="card">
-          <img src="../../../public/images/add-watermark/step_3.png" alt="Download" />
-          <h3>3. Tải xuống hình ảnh có watermark</h3>
-          <p>Khi đã hài lòng với kết quả, bạn có thể tải xuống hình ảnh gắn watermark về thiết bị.</p>
-        </div>
-      </div>
-    </section>
+      <p>Một công cụ đơn giản và hiệu quả để bảo vệ bản quyền hình ảnh của bạn.</p> 
 
-    <!-- DOWNLOAD APP -->
-    <section class="download-app">
-      <div class="download-left">
-        <h2>Tải xuống ứng dụng di động SnapEdit</h2>
-        <p>Ứng dụng SnapEdit hiện có sẵn trên Apple Store & Google Play Store. Ứng dụng của chúng tôi đã được người dùng trên toàn thế giới sử dụng để chỉnh sửa hình ảnh.</p>
+      <div class="image-group" id="imageGroup">
+        <img src="../../../public/images/add-watermark/anh-meo-khong-watermark.jpg" alt="Ảnh gốc" />
+        &ensp; &ensp; &ensp; &ensp; 
+        <img src="../../../public/images/add-watermark/anh-meo-watermark.png" alt="Ảnh có watermark" class="right" />
       </div>
-      <div class="download-buttons">
-        <a href="#" target="_blank" rel="noopener noreferrer">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store" />
-        </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play" />
-        </a>
+    </div>
+    
+    <div class="upload-box">
+      <button id="uploadBtn">Tải lên hình ảnh</button>
+      <input type="file" id="fileInput" accept="image/*" style="display:none" />
+      <p>Hoặc chỉ cần thả vào đây Ctrl + V để dán hình ảnh</p>
+      <hr />
+      <p>Không có hình ảnh? Thử một trong những cái này</p>
+      <div class="upload-images" id="presetImages">
+        <img src="https://cdn-icons-png.flaticon.com/512/616/616404.png" alt="Ảnh mẫu 1" />
+        <img src="https://cdn-icons-png.flaticon.com/512/616/616491.png" alt="Ảnh mẫu 2" />
+        <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Ảnh mẫu 3" />
+        <img src="https://cdn-icons-png.flaticon.com/512/616/616494.png" alt="Ảnh mẫu 4" />
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- FEATURES DARK -->
-    <section class="features-dark">
-      <div class="container">
-        <div class="feature-item">
-          <div class="feature-icon">🔄</div>
-          <div class="feature-text">
-            <h4>Tùy chỉnh watermark linh hoạt</h4>
-            <p>Công cụ chèn watermark của chúng tôi cho phép bạn thêm nhiều loại watermark vào ảnh bao gồm chèn chữ chìm (với đa dạng phông chữ, kích thước và màu sắc); chèn logo chìm, hoặc sự kết hợp của cả hai. Thoải mái điều chỉnh chính xác vị trí và độ mờ của watermark.</p>
-          </div>
-        </div>
-        <div class="feature-item">
-          <div class="feature-icon">📁</div>
-          <div class="feature-text">
-            <h4>Xử lý hàng loạt hình ảnh</h4>
-            <p>Công cụ web của chúng tôi tiết kiệm thời gian bằng cách cho phép chèn watermark vào ảnh hàng loạt. Bạn có thể thêm watermark cho 50 hình ảnh cùng một lúc. Thử ngay bây giờ.</p>
-          </div>
-        </div>
-        <div class="feature-item">
-          <div class="feature-icon">🔒</div>
-          <div class="feature-text">
-            <h4>An toàn khi sử dụng</h4>
-            <p>Bảo mật và quyền riêng tư là điều chúng tôi thực sự quan tâm. Hình ảnh tải lên được mã hóa cẩn thận. Đảm bảo không lưu trữ sau khi ảnh của bạn được xử lý.</p>
-          </div>
-        </div>
-        <button id="tryBtn" class="btn">Thử ngay 😘</button>
+  <!-- HOW IT WORKS -->
+  <section class="how-section">
+    <h2>Cách chèn watermark trên điện thoại hoặc PC</h2>
+    <p>Muốn bảo vệ ảnh của bạn bằng watermark văn bản hoặc logo? Dưới đây là các bước để sử dụng phần mềm chèn watermark online của chúng tôi:</p>
+    <div class="how-cards">
+      <div class="card">
+        <img src="../../../public/images/add-watermark/step_1.png" alt="Upload" />
+        <h3>1. Tải ảnh lên</h3>
+        <p>Tải lên ảnh từ thiết bị của bạn hoặc kéo và thả chúng vào trình chỉnh sửa.</p>
       </div>
-    </section>
+      <div class="card">
+        <img src="../../../public/images/add-watermark/step_2.png" alt="Watermark" />
+        <h3>2. Thêm watermark</h3>
+        <p>Gắn watermark văn bản/logo vào ảnh của bạn. Thủ công đặt chúng trên hình ảnh của bạn, điều chỉnh phông chữ, kích thước, độ mờ theo sở thích của bạn.</p>
+      </div>
+      <div class="card">
+        <img src="../../../public/images/add-watermark/step_3.png" alt="Download" />
+        <h3>3. Tải xuống hình ảnh có watermark</h3>
+        <p>Khi đã hài lòng với kết quả, bạn có thể tải xuống hình ảnh gắn watermark về thiết bị.</p>
+      </div>
+    </div>
+  </section>
+  
+  <!-- DOWNLOAD APP -->
+  <section class="download-app">
+    <div class="download-left">
+      <h2>Tải xuống ứng dụng di động SnapEdit</h2>
+      <p>Ứng dụng SnapEdit hiện có sẵn trên Apple Store & Google Play Store. Ứng dụng của chúng tôi đã được người dùng trên toàn thế giới sử dụng để chỉnh sửa hình ảnh.</p>
+    </div>
+    <div class="download-buttons">
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store" />
+      </a>
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play" />
+      </a>
+    </div>
+  </section>
 
-    <!-- FAQ -->
-    <section class="faq-section">
-      <h2> ❓Các Câu Hỏi Về Công Cụ Chèn Watermark</h2>
-      <div class="faq-item">
-        Việc chèn watermark có miễn phí không?
-        <div class="faq-answer">Có, công cụ này hoàn toàn miễn phí sử dụng.</div>
+  <!-- FEATURES DARK -->
+  <section class="features-dark">
+    <div class="container">
+      <div class="feature-item">
+        <div class="feature-icon">🔄</div>
+        <div class="feature-text">
+          <h4>Tùy chỉnh watermark linh hoạt</h4>
+          <p>Công cụ chèn watermark của chúng tôi cho phép bạn thêm nhiều loại watermark vào ảnh bao gồm chèn chữ chìm (với đa dạng phông chữ, kích thước và màu sắc); chèn logo chìm, hoặc sự kết hợp của cả hai. Thoải mái điều chỉnh chính xác vị trí và độ mờ của watermark.</p>
+        </div>
       </div>
-      <div class="faq-item">
-        Làm thế nào để thêm watermark ngay trên iPhone hoặc thiết bị di động?
-        <div class="faq-answer">Bạn có thể truy cập trang web bằng trình duyệt di động và sử dụng công cụ trực tiếp.</div>
+      <div class="feature-item">
+        <div class="feature-icon">📁</div>
+        <div class="feature-text">
+          <h4>Xử lý hàng loạt hình ảnh</h4>
+          <p>Công cụ web của chúng tôi tiết kiệm thời gian bằng cách cho phép chèn watermark vào ảnh hàng loạt. Bạn có thể thêm watermark cho 50 hình ảnh cùng một lúc. Thử ngay bây giờ.</p>
+        </div>
       </div>
-      <div class="faq-item">
-        Tôi có thể chuyển đổi một hình ảnh thành watermark không?
-        <div class="faq-answer">Hiện tại công cụ chưa hỗ trợ chức năng này.</div>
+      <div class="feature-item">
+        <div class="feature-icon">🔒</div>
+        <div class="feature-text">
+          <h4>An toàn khi sử dụng</h4>
+          <p>Bảo mật và quyền riêng tư là điều chúng tôi thực sự quan tâm. Hình ảnh tải lên được mã hóa cẩn thận. Đảm bảo không lưu trữ sau khi ảnh của bạn được xử lý.</p>
+        </div>
       </div>
-      <div class="faq-item">
-        Có giới hạn kích thước tệp hình ảnh tải lên không?
-        <div class="faq-answer">Giới hạn tối đa 50MB cho mỗi hình ảnh.</div>
-      </div>
-      <div class="faq-item">
-        Tôi có thể tạo và lưu cài đặt watermark để sử dụng cho lần sau không?
-        <div class="faq-answer">Hiện công cụ chưa hỗ trợ lưu cài đặt cá nhân.</div>
-      </div>
-      <div class="faq-item">
-        Nhược điểm của việc sử dụng watermark là gì?
-        <div class="faq-answer">Watermark có thể làm ảnh hưởng phần nào đến thẩm mỹ của hình ảnh.</div>
-      </div>
-    </section>
+      <button id="tryBtn" class="btn">Thử ngay 😘</button>
+    </div>
+  </section>
 
-    <!-- Footer -->
+  <!-- FAQ -->
+  <section class="faq-section">
+    <h2> ❓Các Câu Hỏi Về Công Cụ Chèn Watermark</h2>
+    <div class="faq-item">
+      Việc chèn watermark có miễn phí không?
+      <div class="faq-answer">Có, công cụ này hoàn toàn miễn phí sử dụng.</div>
+    </div>
+    <div class="faq-item">
+      Làm thế nào để thêm watermark ngay trên iPhone hoặc thiết bị di động?
+      <div class="faq-answer">Bạn có thể truy cập trang web bằng trình duyệt di động và sử dụng công cụ trực tiếp.</div>
+    </div>
+    <div class="faq-item">
+      Tôi có thể chuyển đổi một hình ảnh thành watermark không?
+      <div class="faq-answer">Hiện tại công cụ chưa hỗ trợ chức năng này.</div>
+    </div>
+    <div class="faq-item">
+      Có giới hạn kích thước tệp hình ảnh tải lên không?
+      <div class="faq-answer">Giới hạn tối đa 50MB cho mỗi hình ảnh.</div>
+    </div>
+    <div class="faq-item">
+      Tôi có thể tạo và lưu cài đặt watermark để sử dụng cho lần sau không?
+      <div class="faq-answer">Hiện công cụ chưa hỗ trợ lưu cài đặt cá nhân.</div>
+    </div>
+    <div class="faq-item">
+      Nhược điểm của việc sử dụng watermark là gì?
+      <div class="faq-answer">Watermark có thể làm ảnh hưởng phần nào đến thẩm mỹ của hình ảnh.</div>
+    </div>
+  </section>
+
+  <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
@@ -217,6 +228,7 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </main>
 </body>
 </html>
