KieuAnh adjust page links

--- a/snapeditvn-clone/src/pages/add-watermark/index.html
+++ b/snapeditvn-clone/src/pages/add-watermark/index.html
@@ -16,7 +16,7 @@
       <div class="header-content"> <!-- Chứa toàn bộ nội dung bên trong header -->
 
         <!-- Logo -->
-        <a href="/home" class="logo"> 
+        <a href="../home/index.html" class="logo"> 
           <img src="../../../public/images/snapedit-logo.svg" alt="SnapEdit Logo" height="40"/> SnapEdit
         </a>
 
@@ -26,10 +26,10 @@
             <li class="dropdown">
               <a href="#">Sản phẩm AI <span class="arrow">▼</span></a> 
               <ul class="dropdown-menu"> <!-- Menu con -->
-                <li><a href="/add-watermark">Thêm Watermark</a></li> <!-- Link tới tính năng thêm watermark -->
-                <li><a href="/blur-bg">Làm mờ nền</a></li> 
-                <li><a href="/compress-image">Nén ảnh</a></li> 
-                <li><a href="/convert-image">Chuyển đổi ảnh</a></li> 
+                <li><a href="index.html">Thêm Watermark</a></li> 
+                <li><a href="../blur-bg/index.html">Làm mờ nền</a></li> 
+                <li><a href="../compress-image/index.html">Nén ảnh</a></li> 
+                <li><a href="../convert-image/index.html">Chuyển đổi ảnh</a></li> 
               </ul>
             </li>
             <li><a href="#">Giá</a></li> <!-- Mục menu đơn, không có dropdown -->
