--- a/snapeditvn-clone/src/pages/blur-bg/index.html
+++ b/snapeditvn-clone/src/pages/blur-bg/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container">
       <div class="header-content">
-        <a href="/" class="logo">
+        <a href="../home/index.html" class="logo">
           <img src="../../assets/images/logo.svg" alt="SnapEdit Logo">
           <span>SnapEdit</span>
         </a>
@@ -22,10 +22,10 @@
             <li class="dropdown">
               <a href="#">Sản phẩm AI <span class="arrow">▼</span></a>
               <ul class="dropdown-menu">
-                <li><a href="/add-watermark">Thêm Watermark</a></li>
-                <li><a href="/blur-bg">Làm mờ nền</a></li>
-                <li><a href="/compress-image">Nén ảnh</a></li>
-                <li><a href="/convert-image">Chuyển đổi ảnh</a></li>
+                <li><a href="../add-watermark/index.html">Thêm Watermark</a></li>
+                <li><a href="index.html">Làm mờ nền</a></li>
+                <li><a href="../compress-image/index.html">Nén ảnh</a></li>
+                <li><a href="../convert-image/index.html">Chuyển đổi ảnh</a></li>
               </ul>
             </li>
             <li><a href="#">Giá</a></li>
