--- a/snapeditvn-clone/src/pages/compress-image/index.html
+++ b/snapeditvn-clone/src/pages/compress-image/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container">
       <div class="header-content">
-        <a href="/home" class="logo">
+        <a href="../home/index.html" class="logo">
           <img src="../../../public/images/snapedit-logo.svg" alt="SnapEdit Logo" height="40"/>
         </a>
         <nav class="nav-menu">
@@ -25,10 +25,10 @@
             <li class="dropdown">
               <a href="#">Sản phẩm AI <span class="arrow">▼</span></a>
               <ul class="dropdown-menu">
-                <li><a href="/add-watermark">Thêm Watermark</a></li>
-                <li><a href="/blur-bg">Làm mờ nền</a></li>
-                <li><a href="/compress-image">Nén ảnh</a></li>
-                <li><a href="/convert-image">Chuyển đổi ảnh</a></li>
+                <li><a href="../add-watermark/index.html">Thêm Watermark</a></li>
+                <li><a href="../blur-bg/index.html">Làm mờ nền</a></li>
+                <li><a href="index.html">Nén ảnh</a></li>
+                <li><a href="../convert-image/index.html">Chuyển đổi ảnh</a></li>
               </ul>
             </li>
             <li><a href="#">Giá</a></li>
@@ -37,13 +37,13 @@
         <div class="header-actions">
           <div class="language-switcher">
             <button class="language-btn">
-              <img src="../../../public/images/favicon.svg" alt="Tiếng Việt" width="20" height="20"/>
+              <img src="https://flagcdn.com/w20/vn.png" alt="Tiếng Việt" width="20" height="20"/>
               <span>Tiếng Việt</span>
               <span class="arrow">▼</span>
             </button>
             <ul class="language-menu">
-              <li><a href="#"><img src="../../assets/images/flags/vi.svg" alt="VI" width="18" height="18"/> Tiếng Việt</a></li>
-              <li><a href="#"><img src="../../assets/images/flags/en.svg" alt="EN" width="18" height="18"/> English</a></li>
+              <li><a href="#"><img src="https://flagcdn.com/w20/vn.png" alt="VI" width="18" height="18"/> Tiếng Việt</a></li>
+              <li><a href="#"><img src="https://flagcdn.com/w20/us.png" alt="EN" width="18" height="18"/> English</a></li>
             </ul>
           </div>
           <a href="#" class="login-link">Đăng nhập</a>
